# PTAM2

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
docs/: ALGORITHM.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: atlas.rs  commands.rs  dds_codec.rs  image_io.rs  lib.rs  main.rs  models.rs
